멀티캠퍼스
멀티캠퍼스

--- a/html/12_form.html
+++ b/html/12_form.html
@@ -5,7 +5,7 @@
     <title>입력 양식 태그</title>
 </head>
 <body>
-     <!-- method =get/post 사용가능/대부분 post방식으로 사용함-->
+     <!-- method =get/post 사용가능/대부분 post방식으로 사용함 get은 입력갑도 보이게 되서정보유출의 가능성이 있음-->
      <!--서버로 data를 전송하기 위해서 각 태그는 name 속성을 설정하는 것이 일반적이다 -->
     <form method="post" action="=http://test.co.kr/web/newMember.jsp">
         label 태그 사용하지 않음<p>
