--- a/html/12_form.html
+++ b/html/12_form.html
@@ -9,8 +9,8 @@
      <!--서버로 data를 전송하기 위해서 각 태그는 name 속성을 설정하는 것이 일반적이다 -->
     <form method="post" action="=http://test.co.kr/web/newMember.jsp">
         label 태그 사용하지 않음<p>
-        성명<input type="text" id="name" size="10" autofocus><br>
-        <input type="text" id="prdNO" hidden>
+        성명<input type="text" id="name" size="10" autofocus><br>  <!-- 자동으로 포커싱 맞춰짐 -->
+        <input type="text" id="prdNO" hidden>                       <!--  포커싱 맞춰지나.다만 안보임-->
 
         <hr>
 
@@ -26,7 +26,7 @@
         <input type="text" id="name2" size="10">
         <br><br>
         <label>아이디 <input type="text" id="id" maxlength="8"></label><br><br>
-        <label>우편번호 <input type="text" id="zipcode" value="10010" readonly> </label><br><br>
+        <label>우편번호 <input type="text" id="zipcode" value="10010" readonly> </label><br><br> <!--readonly 일기만 가능 -->
         <label>주소 <input type="text" id="address" required></label><br><br>
 <!-- required : 필수입력필드-주소는 입력해야 submit이 발생할수 잇음-->
         <hr>
