--- a/css/class_seletor_ex.html
+++ b/css/class_seletor_ex.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <title>div 태그 다르게 선택</title>
 <style type="text/css">
- div{width:100px ; height:30 px; border:solid 1px black;}  <!-- div 설정  -->
+div{width:100px ; height:30 px; border:solid 1px black;} 
 .redBOX {background:red;}
 .blueBOX {background:blue;}  
 </style>
 
-
-
-
+<!-- div 셀 설정     -->
+<!-- redBOX 설정     -->
+<!-- blueBOX 설정     -->
 </head>
 <body>
 <!-- div는 block 태그기 떄문에 한 행을 모두 차지 -->
